css/style.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap");

:root {
  --clr-primary: #1ab394;
  --clr-secondary-dark: #245373;
  --clr-secondary-light: #1997f0;
  --clr-white: #fff;
  --clr-gray-dark: #e5e5e5;
  --clr-gray-light: #fcfcfc;
  --clr-blue-dark: #051521;
  --clr-blue-semi-dark: #0d3c5c;
  --clr-blue-light: #bbdfd8;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Montserrat", serif;
  list-style-type: none;
}

body {
  background-image: url("../images/bg-image.png");
  background-size: cover;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-position: center center;
  color: var(--clr-secondary-dark);
  height: 100vh;
}

a {
  text-decoration: none;
  display: inline-block;
  color: inherit;
}

button {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  padding: 10px;
  background-color: var(--clr-primary);
  color: var(--clr-white);
  border: none;
  border-radius: 3px;
  cursor: pointer;
  margin-top: 10px;
  transition: all 0.3s ease-in;
}

button:hover {
  transform: scale(1.05);
}

input,
select,
textarea {
  display: inline-block;
  padding: 10px;
  outline: none;
  border: 1px solid var(--clr-gray-dark);
  border-radius: 4px 4px 0 0;
  margin-bottom: 15px;
  background-color: var(--clr-gray-light);
  outline: none;
  transition: all 0.2s ease;
}

textarea {
  display: block;
  width: 100%;
  resize: none;
}

input:focus, textarea:focus {
  border-bottom: 3px solid var(--clr-secondary-light);
}

.card-container {
  background-color: var(--clr-white);
  width: 350px;
  padding: 10% 5% 10%;
  border-radius: 10px;
  box-shadow: 0px 0px 12px 0px rgba(26, 179, 148, 0.39);
}

.card-container h2 {
  text-align: center;
  font-size: 1.1rem;
  color: var(--clr-secondary-dark);
  font-weight: 500;
  margin-bottom: 1.5em;
}

.card-container input {
  width: 100%;
}

.input-group label {
  font-size: 0.7em;
  font-weight: 500;
  color: var(--clr-secondary-dark);
}

.input-group.success input {
  border-color: green;
}

.input-group.error input {
  border-color: red;
}

.input-group small {
  font-size: 0.6em;
  margin-top: -10px;
  margin-bottom: 5px;
  display: block;
  color: red;
  opacity: 0;
  transform: translateX(10%);
  transition: all 0.5s ease;
}

